- Fixed Group User relationship configuration, due to wrong name in parameters definition - Added option to join groups using group name instead of using the generated code - Added option to join group component to display what groups the user belongs to - Added Trait that allows multiple components in the same page without conflicting each other. ( copy from recommendation plugin ) - Added option to auto accept invites when adding members to a group - Minor bug fixing

--- a/components/groupjoincodeform/default.htm
+++ b/components/groupjoincodeform/default.htm
@@ -1,23 +1,16 @@
-<form
-	data-request="{{ __SELF__ }}::onSubmit"
-	data-request-update="'{{ __SELF__ }}::list': '#result'"	    
-    data-request-success="$('#input-user').val('')"
-    id="add-users">
-	<div class="panel panel-default">
-		<div class="panel-heading">
-		    <h3 class="panel-title">{{ user.name }} join to your group by code.</h3>
-		</div>
-		<div class="panel-body" id="user-search">
-            <div class="input-group">
-		                <input type="text" id="input-code" class="form-control" value="" name="code"     
-		                placeholder="Type group code"> 
-		                <span class="input-group-btn">
-		                    <button type="submit" class="btn btn-primary">join</button>
-		                </span>
-		            </div>
-		    </div>
-		 <ul class="list-group hidden" id="autocomplete">
-		 </ul>	            
-		</div>
-	</div>
-</form>
+{{ form_ajax('onJoinGroup', { class : 'form-horizontal', update: { '@flashMessages': '#flashMessages', 'GroupJoinCodeForm::groups-list': '#join_group_result' } } ) }} 
+
+    <div class="input-group">
+          <input type="text" id="input-code" class="form-control" value="" name="code"     
+          placeholder="Type group {{ using_code }}"> 
+          <span class="input-group-btn">
+              <button type="submit" class="btn btn-primary">join</button>
+          </span>
+    </div>
+
+{{ form_close() }}
+
+<div id="view"> 
+	{% partial '@groups-list' %}
+</div>
+
